feat: add pastebin support

--- a/beta_notebook.ipynb
+++ b/beta_notebook.ipynb
@@ -64,7 +64,6 @@
         "# @markdown ### **Drive Config**\n",
         "mount_drive         = False  # @param {type:'boolean'}\n",
         "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
-        "launch_in_drive     = False  # @param {type:'boolean'}\n",
         "# @markdown ### **Repo Config**\n",
         "repo_type           = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-Dev\", \"Anapnoe\", \"Vladmandic\"]\n",
         "update_webui        = True  # @param {type:'boolean'}\n",
@@ -82,10 +81,6 @@
         "# ROOT DIR\n",
         "root_dir            = \"/content\"\n",
         "drive_dir           = os.path.join(root_dir, \"drive\", \"MyDrive\")\n",
-        "\n",
-        "if launch_in_drive:\n",
-        "    root_dir        = drive_dir\n",
-        "\n",
         "repo_dir            = os.path.join(root_dir, \"cagliostro-colab-ui\")\n",
         "tmp_dir             = os.path.join(root_dir, \"tmp\")\n",
         "patches_dir         = os.path.join(root_dir, \"patches\")\n",
@@ -101,8 +96,11 @@
         "esrgan_dir          = os.path.join(repo_dir, \"models\", \"ESRGAN\")\n",
         "embeddings_dir      = os.path.join(repo_dir, \"embeddings\")\n",
         "extensions_dir      = os.path.join(repo_dir, \"extensions\")\n",
+        "\n",
+        "# CONFIG \n",
         "config_file         = os.path.join(repo_dir, \"config.json\")\n",
         "style_path          = os.path.join(repo_dir, \"style.css\")\n",
+        "download_list       = os.path.join(root_dir, \"download_list.txt\")\n",
         "\n",
         "# VAR\n",
         "voldemort           = base64.b64decode(\"c3RhYmxlLWRpZmZ1c2lvbi13ZWJ1aQ==\".encode('ascii')).decode('ascii')\n",
@@ -307,6 +305,10 @@
         "    if update_extensions:\n",
         "        batch_update(fetch=True, directory=extensions_dir, desc=cprint(f\"Updating extensions\", color=\"green\", tqdm_desc=True))\n",
         "\n",
+        "    if not os.path.exists(download_list):\n",
+        "        download_list_url = \"https://raw.githubusercontent.com/Linaqruf/sd-notebook-collection/main/config/download_list.txt\"\n",
+        "        aria2_download(os.path.dirname(download_list), os.path.basename(download_list), download_list_url, quiet=True)\n",
+        "\n",
         "    elapsed_time = py_utils.calculate_elapsed_time(start_time)\n",
         "    print_line(80, color=\"green\")\n",
         "    cprint(f\"Finished installation. Took {elapsed_time}.\", color=\"flat_yellow\")\n",
@@ -316,8 +318,7 @@
         "main()"
       ],
       "metadata": {
-        "id": "A6c7-qjDdb0X",
-        "cellView": "form"
+        "id": "A6c7-qjDdb0X"
       },
       "execution_count": null,
       "outputs": []
@@ -618,26 +619,31 @@
         "from colablib.utils.ubuntu_utils import unionfuse\n",
         "from colablib.utils.git_utils import clone_repo\n",
         "from colablib.colored_print import cprint, print_line\n",
+        "from colablib.utils.config_utils import read_config\n",
         "\n",
         "%store -r\n",
+        "\n",
+        "# @markdown\n",
+        "# @markdown ### **Cheatsheet**\n",
+        "# @markdown - Use comma separation for multiple URLs, e.g. `url1, url2, url3`.\n",
+        "# @markdown - To load Google Drive, use `fuse:` followed by path, e.g. `fuse:/content/MyDrive/LoRA`.\n",
+        "# @markdown - Copy your model path from Google Drive to URL fields to copy your model to the web UI models directory.\n",
+        "custom_model_url        = \"\"  # @param {'type': 'string'}\n",
+        "custom_vae_url          = \"\"  # @param {'type': 'string'}\n",
+        "custom_embedding_url    = \"\"  # @param {'type': 'string'}\n",
+        "custom_LoRA_url         = \"\"  # @param {'type': 'string'}\n",
+        "custom_hypernetwork_url = \"\"  # @param {'type': 'string'}\n",
+        "custom_extensions_url   = \"https://github.com/Zuellni/Stable-Diffusion-WebUI-Image-Filters\"  # @param {'type': 'string'}\n",
+        "custom_upscaler_url     = \"https://huggingface.co/Linaqruf/stolen/resolve/main/upscaler/4x_NMKD-Superscale-SP_178000_G.pth, https://huggingface.co/Linaqruf/stolen/resolve/main/upscaler/4x_NMKD-YandereNeoXL_200k.pth\"  # @param {'type': 'string'}\n",
+        "# @markdown ### <br>`NEW` **Download from textfile**\n",
+        "# @markdown - Provide a custom download URL for a `.txt` file instead of using the URL field. Edit the file: `/content/download_list.txt`. \n",
+        "# @markdown - Available hashtags: `#model`, `#vae`, `#embedding`, `#lora`, `#hypernetwork`, `#extensions`, `#upscaler`.\n",
+        "# @markdown - Or you can input your `.txt` file in `custom_download_list_url` below. Works for `pastebin`.\n",
+        "custom_download_list_url = \"https://pastebin.com/LwcZC6b6\"  # @param {'type': 'string'}\n",
         "\n",
         "class CustomDirs(BaseModel):\n",
         "    url: str\n",
         "    dst: str\n",
-        "\n",
-        "# @markdown Fill in the URL fields with the links to the files you want to download. Small tips:\n",
-        "# @markdown - Separate multiple URLs with a comma for parallel downloads. e.g. `url1, url2, url3`\n",
-        "# @markdown - Use the prefix `fuse:` followed by your Google Drive path to load your Google Drive folder. e.g. `fuse:/content/MyDrive/LoRA`\n",
-        "# @markdown - You can also copy your model path from Google Drive to URL fields. It will copy your model to the web UI models directory.\n",
-        "# @markdown - The `prune:`, `fp16:`, and `fp32:` functions are currently not available.\n",
-        "\n",
-        "custom_model_url        = \"\"  # @param {'type': 'string'}\n",
-        "custom_vae_url          = \"\"  # @param {'type': 'string'}\n",
-        "custom_embedding_url    = \"\"  # @param {'type': 'string'}\n",
-        "custom_LoRA_url         = \"fuse:/content/sample_data\"  # @param {'type': 'string'}\n",
-        "custom_hypernetwork_url = \"\"  # @param {'type': 'string'}\n",
-        "custom_extensions_url   = \"https://github.com/Zuellni/Stable-Diffusion-WebUI-Image-Filters\"  # @param {'type': 'string'}\n",
-        "custom_upscaler_url     = \"https://huggingface.co/Linaqruf/stolen/resolve/main/upscaler/4x_NMKD-Superscale-SP_178000_G.pth, https://huggingface.co/Linaqruf/stolen/resolve/main/upscaler/4x_NMKD-YandereNeoXL_200k.pth\"  # @param {'type': 'string'}\n",
         "\n",
         "custom_dirs = {\n",
         "    \"model\"       : CustomDirs(url=custom_model_url, dst=models_dir),\n",
@@ -649,10 +655,9 @@
         "    \"upscaler\"    : CustomDirs(url=custom_upscaler_url, dst=esrgan_dir)\n",
         "}\n",
         "\n",
-        "\n",
         "def fuse(url, key, dst):\n",
         "    if \"extensions\" in key:\n",
-        "        cprint(f\"folder can't be fused, skipping...\")\n",
+        "        cprint(f\"Folder can't be fused, skipping...\")\n",
         "        return\n",
         "\n",
         "    path = url.split(\"fuse:\")[1].strip()\n",
@@ -661,31 +666,26 @@
         "        cprint(f\"Folder '{category_dir}' is already fused, skipping...\", color=\"yellow\")\n",
         "        return\n",
         "\n",
-        "    cprint(\"Fusing process started for PATH:\", url,  color=\"green\")\n",
+        "    cprint(f\"Fusing process started for PATH: '{path}'\", color=\"green\")\n",
         "    unionfuse(category_dir, path, dst)\n",
-        "    cprint(f\"Fusing process completed. Valid {key} folder located at:\", category_dir, color=\"green\") \n",
+        "    cprint(f\"Fusing process completed. Valid '{key}' folder located at: '{category_dir}' \", color=\"green\") \n",
         "\n",
         "def parse_urls(filename):\n",
-        "    with open(filename, 'r') as f:\n",
-        "        content = f.read()\n",
-        "\n",
-        "    # Split the content by lines\n",
-        "    lines = content.strip().split('\\n')\n",
-        "\n",
-        "    result = {}\n",
-        "\n",
-        "    key = ''\n",
+        "    content = read_config(filename)\n",
+        "    lines   = content.strip().split('\\n')\n",
+        "    result  = {}\n",
+        "    key     = ''\n",
         "    for line in lines:\n",
-        "        # Check if this line is a key\n",
+        "        if not line.strip():\n",
+        "            continue\n",
+        "        if line.startswith('//'):\n",
+        "            continue\n",
         "        if line.startswith('#'):\n",
         "            key = line[1:].lower()\n",
         "            result[key] = []\n",
         "        else:\n",
-        "            # This line is a list of URLs\n",
-        "            # Split the URLs by comma and add them to the list\n",
         "            urls = [url.strip() for url in line.split(',') if url.strip() != '']\n",
         "            result[key].extend(urls)\n",
-        "    \n",
         "    return result\n",
         "\n",
         "def custom_download(custom_dirs):\n",
@@ -704,7 +704,8 @@
         "                if \"|\" in url:\n",
         "                    url, filename = map(str.strip, url.split(\"|\"))\n",
         "                else:\n",
-        "                    filename = get_filename(url)\n",
+        "                    if not url.startswith(\"fuse:\"):\n",
+        "                        filename = get_filename(url)\n",
         "\n",
         "                if url.startswith(\"fuse:\"):\n",
         "                    fuse(url, key, dst)\n",
@@ -713,24 +714,34 @@
         "                else:\n",
         "                    download(url=url, filename=filename, dst=dst, quiet=False)\n",
         "\n",
-        "def download_from_txt(filename):\n",
-        "  \n",
-        "    urls_from_file = parse_urls(filename)\n",
-        "\n",
-        "    for key, urls in urls_from_file.items():\n",
+        "def download_from_textfile(filename):\n",
+        "    for key, urls in parse_urls(filename).items():\n",
         "        key_lower = key.lower()\n",
         "        if key_lower in custom_dirs:\n",
-        "            custom_dirs[key_lower].url = ','.join(urls)\n",
+        "            if custom_dirs[key_lower].url:\n",
+        "                custom_dirs[key_lower].url += ',' + ','.join(urls)\n",
+        "            else:\n",
+        "                custom_dirs[key_lower].url = ','.join(urls)\n",
         "        else:\n",
-        "           cprint(f\"Warning: Category '{key}' from the file is not found in custom_dirs.\", color=\"yellow\")\n",
-        "        \n",
-        "def main():\n",
-        "    start_time = time.time()\n",
+        "            cprint(f\"Warning: Category '{key}' from the file is not found in custom_dirs.\", color=\"yellow\")\n",
         "\n",
-        "    download_from_txt(\"/content/download.txt\")\n",
+        "def custom_download_list(url):\n",
+        "    filename = \"custom_download_list.txt\"\n",
+        "    if 'pastebin.com' in url:\n",
+        "        if 'raw' not in url:\n",
+        "            url = url.replace('pastebin.com', 'pastebin.com/raw')\n",
+        "    download(url=url, filename=filename, dst=root_dir, quiet=True)\n",
+        "    return os.path.join(root_dir, filename)\n",
+        "\n",
+        "def main():\n",
+        "    start_time    = time.time()\n",
+        "    textfile_path = os.path.join(root_dir, \"download_list.txt\")\n",
+        "    if custom_download_list_url:\n",
+        "        textfile_path = custom_download_list(custom_download_list_url)\n",
+        "    download_from_textfile(textfile_path)\n",
         "    custom_download(custom_dirs)\n",
         "    \n",
-        "    elapsed_time = py_utils.calculate_elapsed_time(start_time)\n",
+        "    elapsed_time  = py_utils.calculate_elapsed_time(start_time)\n",
         "    print_line(80, color=\"green\")\n",
         "    cprint(f\"Download finished. Took {elapsed_time}.\", color=\"flat_yellow\")\n",
         "    cprint(\"All is done! Go to the next step.\", color=\"flat_yellow\")\n",
@@ -739,6 +750,7 @@
         "main()"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "SoZcrfQk6Y2z"
       },
       "execution_count": null,
@@ -748,7 +760,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SaAJk33ppFw1"
+        "id": "SaAJk33ppFw1",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
