--- a/beta_notebook.ipynb
+++ b/beta_notebook.ipynb
@@ -750,6 +750,8 @@
       "source": [
         "import random\n",
         "import string\n",
+        "import threading\n",
+        "from IPython.display import clear_output, display, HTML\n",
         "from pydantic import BaseModel\n",
         "from typing import List, Optional\n",
         "from colablib.utils import config_utils\n",
@@ -792,6 +794,9 @@
         "    theme_config    = config_utils.read_config(themes_file)\n",
         "    style_data      = \":host{\" + theme_config + \"}\" + \"/*BREAKPOINT_CSS_CONTENT*/\" + style_contents\n",
         "    config_utils.write_config(style_path, style_data)\n",
+        "\n",
+        "def play_audio(url):\n",
+        "    display(HTML(f'<audio src=\"{url}\" controls autoplay style=\"display:none\"></audio>'))\n",
         "\n",
         "def is_valid(valid_dir, file_types):\n",
         "    return [f for f in os.listdir(valid_dir) if f.endswith(file_types)]\n",
@@ -900,6 +905,9 @@
         "def main():\n",
         "    global auto_select_model, auto_select_vae\n",
         "\n",
+        "    audio_thread = threading.Thread(target=play_audio, args=(\"https://raw.githubusercontent.com/KoboldAI/KoboldAI-Client/main/colab/silence.m4a\",))\n",
+        "    audio_thread.start()\n",
+        "    \n",
         "    repo_name, _, _ = validate_repo(repo_dir)\n",
         "    if \"anapnoe\" in repo_name:\n",
         "        change_theme(select_theme)\n",
@@ -909,6 +917,8 @@
         "    valid_embedding_dir     = is_dir_exist(os.path.join(fused_dir, \"embedding\"), embeddings_dir)\n",
         "    valid_lora_dir          = is_dir_exist(os.path.join(fused_dir, \"lora\"), lora_dir)\n",
         "    valid_hypernetwork_dir  = is_dir_exist(os.path.join(fused_dir, \"hypernetwork\"), hypernetworks_dir)\n",
+        "\n",
+        "    \n",
         "\n",
         "    print_line(80, color=\"green\")\n",
         "    cprint(f\"Launching '{repo_name}'\", color=\"flat_yellow\")\n",
@@ -1336,6 +1346,7 @@
         "    )"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "Ojb4nAieATxI"
       },
       "execution_count": null,
