feat: refactor extras

--- a/beta_notebook.ipynb
+++ b/beta_notebook.ipynb
@@ -19,7 +19,7 @@
         "# **Cagliostro Colab UI**\n",
         "All-in-One, Customizable and Flexible Stable Diffusion for Google Colab.\n",
         "\n",
-        "V3.0.0 | [Github][link-to-github] | [What's New?][README] | [Pocketbook Guide][MANUAL]\n",
+        "**Version 3.0.0** | [Github][link-to-github] | [What's New?][README] | [Pocketbook Guide][MANUAL] (outdated)\n",
         "\n",
         "<!-- [visitor-badge]: https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui -->\n",
         "[visitor-badge]: https://api.visitorbadge.io/api/visitors?path=Cagliostro%20Colab%20UI&label=Visitors&labelColor=%2334495E&countColor=%231ABC9C&style=flat&labelStyle=none\n",
@@ -68,10 +68,11 @@
         "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
         "# @markdown ### **Repo Config**\n",
         "repo_type           = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-Dev\", \"Anapnoe\"]\n",
-        "update_webui        = True  # @param {type:'boolean'}\n",
+        "update_webui        = False  # @param {type:'boolean'}\n",
         "update_extensions   = True  # @param {type:'boolean'}\n",
         "commit_hash         = \"\"  # @param {type:'string'}\n",
         "dpm_v2_patch        = False  # @param {type:'boolean'}\n",
+        "# @markdown ### **Optimization Config**\n",
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
         "ram_alloc_patch     = True  # @param {type:'boolean'}\n",
         "colab_optimizations = True  # @param {type:'boolean'}\n",
@@ -767,6 +768,7 @@
         "from pydantic import BaseModel\n",
         "from typing import List, Optional\n",
         "from colablib.utils import config_utils\n",
+        "from colablib.colored_print import cprint, print_line\n",
         "from colablib.utils.git_utils import validate_repo\n",
         "\n",
         "%store -r\n",
@@ -777,7 +779,7 @@
         "\n",
         "# @markdown ### **Alternative Tunnel**\n",
         "# @markdown > Recommended Tunnels: `ngrok` > `gradio` > `cloudflared` > `remotemoe` > `localhostrun` > `googleusercontent`\n",
-        "select_tunnel         = \"gradio\" # @param ['gradio', 'multiple','cloudflared', 'localhostrun', 'remotemoe', \"googleusercontent\"]\n",
+        "select_tunnel         = \"multiple\" # @param ['gradio', 'multiple','cloudflared', 'localhostrun', 'remotemoe', \"googleusercontent\"]\n",
         "# @markdown > Get your `ngrok_token` [here](https://dashboard.ngrok.com/get-started/your-authtoken) \n",
         "ngrok_token           = \"\" # @param {type: 'string'}\n",
         "ngrok_region          = \"ap\" # @param [\"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
@@ -786,7 +788,7 @@
         "# @markdown Set `use_preset` for using default prompt, resolution, sampler, and other settings\n",
         "use_presets           = True # @param {type: 'boolean'}\n",
         "# @markdown ### **Arguments**\n",
-        "use_gradio_auth       = True # @param {type: 'boolean'}\n",
+        "use_gradio_auth       = False # @param {type: 'boolean'}\n",
         "accelerator           = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-sdp-no-mem-attention', 'opt-split-attention']\n",
         "auto_select_model     = False # @param {type: 'boolean'}\n",
         "auto_select_vae       = True # @param {type: 'boolean'}\n",
@@ -924,8 +926,6 @@
         "    valid_lora_dir          = is_dir_exist(os.path.join(fused_dir, \"lora\"), lora_dir)\n",
         "    valid_hypernetwork_dir  = is_dir_exist(os.path.join(fused_dir, \"hypernetwork\"), hypernetworks_dir)\n",
         "\n",
-        "    \n",
-        "\n",
         "    print_line(80, color=\"green\")\n",
         "    cprint(f\"Launching '{repo_name}'\", color=\"flat_yellow\")\n",
         "    print_line(80, color=\"green\")\n",
@@ -1011,15 +1011,16 @@
         "# @title ## **Download Generated Images** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#download-generated-images)</small></small>\n",
         "# @markdown Download file manually from files tab or save to Google Drive\n",
         "import os\n",
+        "\n",
         "from pydrive.auth import GoogleAuth\n",
-        "from google.colab import drive\n",
         "from pydrive.drive import GoogleDrive\n",
-        "from google.colab import auth\n",
+        "from google.colab import auth, drive\n",
         "from oauth2client.client import GoogleCredentials\n",
+        "from colablib.colored_print import cprint, print_line\n",
         "\n",
         "%store -r\n",
         "\n",
-        "os.chdir(drive_dir)\n",
+        "os.chdir(output_dir)\n",
         "\n",
         "use_drive = True  # @param {type:\"boolean\"}\n",
         "folder_name = \"cagliostro-colab-ui\"  # @param {type: \"string\"}\n",
@@ -1032,7 +1033,7 @@
         "        i += 1\n",
         "    filename = f\"waifu({i}).zip\"\n",
         "\n",
-        "!zip -r /content/outputs.zip .\n",
+        "os.system('zip -r /content/outputs.zip .')\n",
         "\n",
         "if use_drive:\n",
         "    auth.authenticate_user()\n",
@@ -1041,42 +1042,31 @@
         "    drive = GoogleDrive(gauth)\n",
         "\n",
         "    def create_folder(folder_name):\n",
-        "        file_list = drive.ListFile(\n",
-        "            {\n",
-        "                \"q\": \"title='{}' and mimeType='application/vnd.google-apps.folder' and trashed=false\".format(\n",
-        "                    folder_name\n",
-        "                )\n",
-        "            }\n",
-        "        ).GetList()\n",
-        "        if len(file_list) > 0:\n",
-        "            print(\"Debug: Folder exists\")\n",
+        "        file_list = drive.ListFile({\n",
+        "            \"q\": f\"title='{folder_name}' and mimeType='application/vnd.google-apps.folder' and trashed=false\"\n",
+        "        }).GetList()\n",
+        "        if file_list:\n",
+        "            cprint(\"Debug: Folder exists\", color=\"green\")\n",
         "            folder_id = file_list[0][\"id\"]\n",
         "        else:\n",
-        "            print(\"Debug: Creating folder\")\n",
-        "            file = drive.CreateFile(\n",
-        "                {\"title\": folder_name, \"mimeType\": \"application/vnd.google-apps.folder\"}\n",
-        "            )\n",
+        "            cprint(\"Debug: Creating folder\", color=\"green\")\n",
+        "            file = drive.CreateFile({\n",
+        "                \"title\": folder_name, \n",
+        "                \"mimeType\": \"application/vnd.google-apps.folder\"\n",
+        "            })\n",
         "            file.Upload()\n",
         "            folder_id = file.attr[\"metadata\"][\"id\"]\n",
         "        return folder_id\n",
         "\n",
         "    def upload_file(file_name, folder_id, save_as):\n",
-        "        file_list = drive.ListFile(\n",
-        "            {\"q\": \"title='{}' and trashed=false\".format(save_as)}\n",
-        "        ).GetList()\n",
-        "        if len(file_list) > 0:\n",
-        "            print(\"Debug: File already exists\")\n",
+        "        file_list = drive.ListFile({\"q\": f\"title='{save_as}' and trashed=false\"}).GetList()\n",
+        "        if file_list:\n",
+        "            cprint(\"Debug: File already exists\", color=\"green\")\n",
         "            i = 1\n",
         "            while True:\n",
-        "                new_name = (\n",
-        "                    os.path.splitext(save_as)[0]\n",
-        "                    + f\"({i})\"\n",
-        "                    + os.path.splitext(save_as)[1]\n",
-        "                )\n",
-        "                file_list = drive.ListFile(\n",
-        "                    {\"q\": \"title='{}' and trashed=false\".format(new_name)}\n",
-        "                ).GetList()\n",
-        "                if len(file_list) == 0:\n",
+        "                new_name = f\"{os.path.splitext(save_as)[0]}({i}){os.path.splitext(save_as)[1]}\"\n",
+        "                file_list = drive.ListFile({\"q\": f\"title='{new_name}' and trashed=false\"}).GetList()\n",
+        "                if not file_list:\n",
         "                    save_as = new_name\n",
         "                    break\n",
         "                i += 1\n",
@@ -1087,11 +1077,7 @@
         "        return file.attr[\"metadata\"][\"id\"]\n",
         "\n",
         "    file_id = upload_file(\"/content/outputs.zip\", create_folder(folder_name), save_as)\n",
-        "    print(\n",
-        "        \"Your sharing link: https://drive.google.com/file/d/\"\n",
-        "        + file_id\n",
-        "        + \"/view?usp=sharing\"\n",
-        "    )"
+        "    cprint(f\"Your sharing link: https://drive.google.com/file/d/{file_id}/view?usp=sharing\", color=\"green\")\n"
       ],
       "metadata": {
         "cellView": "form",
@@ -1112,76 +1098,85 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title ## **Download Generated Images V2** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#download-generated-images-v2)</small></small>\n",
-        "from IPython.utils import capture\n",
-        "from huggingface_hub import login\n",
-        "from huggingface_hub import HfApi\n",
-        "from huggingface_hub.utils import validate_repo_id, HfHubHTTPError\n",
+        "# @title ## **Download Generated Images V2** \n",
         "import shutil\n",
         "import os\n",
+        "from IPython.utils import capture\n",
+        "from huggingface_hub import login, HfApi\n",
+        "from huggingface_hub.utils import validate_repo_id, HfHubHTTPError\n",
+        "from colablib.colored_print import cprint, print_line\n",
         "\n",
         "# @markdown Download your output by upload it to **Huggingface** instead of Google Drive.\n",
         "# @markdown > Get **your** huggingface `WRITE` token [here](https://huggingface.co/settings/tokens)\n",
         "write_token = \"\"  # @param {type:\"string\"}\n",
         "# @markdown Specify where is your repo located, it will automatically create your repo if you didn't have one.\n",
         "repo_name = \"cagliostro-colab-ui\"  # @param{type:\"string\"}\n",
-        "repo_name = repo_name.replace(\" \", \"-\")\n",
         "private_repo = False  # @param{type:\"boolean\"}\n",
         "# @markdown This will be compressed to zip and uploaded to datasets repo\n",
         "project_name = \"waifu\"  # @param {type :\"string\"}\n",
+        "\n",
+        "repo_name = repo_name.replace(\" \", \"-\")\n",
         "project_name = project_name.replace(\" \", \"_\")\n",
         "\n",
         "if not project_name:\n",
         "    project_name = \"waifu\"\n",
         "\n",
-        "dataset_zip = project_name + \".zip\"\n",
+        "dataset_zip = f\"{project_name}.zip\"\n",
         "output_path = os.path.join(root_dir, dataset_zip)\n",
-        "commit_message = \"Feat: Upload \" + dataset_zip + \" with Cagliostro Colab UI\"\n",
+        "commit_message = f\"Feat: Upload {dataset_zip} with Cagliostro Colab UI\"\n",
         "\n",
-        "with capture.capture_output() as cap:\n",
-        "    login(write_token, add_to_git_credential=True)\n",
-        "output = cap.stdout.strip()\n",
-        "if \"Token is valid.\" in output:\n",
-        "    print(\"\u001b[1;32mLogin Succesful.\")\n",
-        "\n",
-        "api = HfApi()\n",
-        "user = api.whoami(write_token)\n",
-        "\n",
-        "datasets_repo = user[\"name\"] + \"/\" + repo_name.strip()\n",
-        "\n",
-        "if repo_name:\n",
+        "def create_or_validate_repo(api, datasets_repo):\n",
         "    try:\n",
         "        validate_repo_id(datasets_repo)\n",
         "        api.create_repo(\n",
         "            repo_id=datasets_repo, repo_type=\"dataset\", private=private_repo\n",
         "        )\n",
-        "        print(\n",
-        "            f\"\u001b[1;32mRepo created, located at https://huggingface.co/datasets/{datasets_repo}\"\n",
-        "        )\n",
+        "        cprint(f\"Repo created, located at \"\n",
+        "              f\"https://huggingface.co/datasets/{datasets_repo}\", color=\"green\")\n",
         "\n",
-        "    except HfHubHTTPError as e:\n",
-        "        print(f\"\u001b[1;32mRepo exist, skipping...\")\n",
+        "    except HfHubHTTPError:\n",
+        "        cprint(f\"Repo exists, skipping...\", color=\"green\")\n",
         "\n",
-        "os.chdir(drive_dir)\n",
-        "print(f\"\u001b[1;32mCompressing to ZIP...\")\n",
-        "with capture.capture_output() as cap:\n",
-        "    !zip -rv {output_path} .\n",
+        "def compress_to_zip(output_path):\n",
+        "    os.chdir(output_dir)\n",
+        "    cprint(f\"Compressing to ZIP...\", color=\"green\")\n",
+        "    with capture.capture_output() as cap:\n",
+        "        !zip -rv {output_path} .\n",
         "\n",
-        "print(f\"\u001b[1;32mUploading generated images... Please wait...\")\n",
+        "def upload_and_cleanup(api, output_path, datasets_repo):\n",
+        "    cprint(f\"Uploading generated images... Please wait...\", color=\"green\")\n",
         "\n",
-        "api.upload_file(\n",
-        "    path_or_fileobj=output_path,\n",
-        "    path_in_repo=dataset_zip,\n",
-        "    repo_id=datasets_repo,\n",
-        "    repo_type=\"dataset\",\n",
-        "    commit_message=commit_message,\n",
-        ")\n",
+        "    api.upload_file(\n",
+        "        path_or_fileobj=output_path,\n",
+        "        path_in_repo=dataset_zip,\n",
+        "        repo_id=datasets_repo,\n",
+        "        repo_type=\"dataset\",\n",
+        "        commit_message=commit_message,\n",
+        "    )\n",
         "\n",
-        "print(\n",
-        "    f\"\u001b[1;32mUpload success, download directly at https://huggingface.co/datasets/{datasets_repo}/resolve/main/{dataset_zip}\"\n",
-        ")\n",
+        "    cprint(f\"Upload success, download directly at \"\n",
+        "          f\"https://huggingface.co/datasets/{datasets_repo}/resolve/main/{dataset_zip}\", color=\"green\")\n",
         "\n",
-        "os.remove(output_path)"
+        "    os.remove(output_path)\n",
+        "\n",
+        "def main():\n",
+        "    with capture.capture_output() as cap:\n",
+        "        login(write_token, add_to_git_credential=True)\n",
+        "    output = cap.stdout.strip()\n",
+        "\n",
+        "    if \"Token is valid.\" in output:\n",
+        "        cprint(f\"Login Successful.\", color=\"green\")\n",
+        "\n",
+        "    api = HfApi()\n",
+        "    user = api.whoami(write_token)\n",
+        "    datasets_repo = f\"{user['name']}/{repo_name.strip()}\"\n",
+        "\n",
+        "    if repo_name:\n",
+        "        create_or_validate_repo(api, datasets_repo)\n",
+        "        compress_to_zip(output_path)\n",
+        "        upload_and_cleanup(api, output_path, datasets_repo)\n",
+        "\n",
+        "main()\n"
       ],
       "metadata": {
         "cellView": "form",
