--- a/beta_notebook.ipynb
+++ b/beta_notebook.ipynb
@@ -632,8 +632,8 @@
         "custom_embedding_url    = \"\"  # @param {'type': 'string'}\n",
         "custom_LoRA_url         = \"\"  # @param {'type': 'string'}\n",
         "custom_hypernetwork_url = \"\"  # @param {'type': 'string'}\n",
-        "custom_extensions_url   = \"https://github.com/Zuellni/Stable-Diffusion-WebUI-Image-Filters\"  # @param {'type': 'string'}\n",
-        "custom_upscaler_url     = \"https://huggingface.co/Linaqruf/stolen/resolve/main/upscaler/4x_NMKD-Superscale-SP_178000_G.pth, https://huggingface.co/Linaqruf/stolen/resolve/main/upscaler/4x_NMKD-YandereNeoXL_200k.pth\"  # @param {'type': 'string'}\n",
+        "custom_extensions_url   = \"\"  # @param {'type': 'string'}\n",
+        "custom_upscaler_url     = \"\"  # @param {'type': 'string'}\n",
         "# @markdown ### <br>`NEW` **Download from Textfile**\n",
         "# @markdown - Provide a custom download URL for a `.txt` file instead of using the URL field. Edit the file: `/content/download_list.txt`. \n",
         "# @markdown - Available hashtags: `#model`, `#vae`, `#embedding`, `#lora`, `#hypernetwork`, `#extensions`, `#upscaler`.\n",
