--- a/beta_notebook.ipynb
+++ b/beta_notebook.ipynb
@@ -71,7 +71,7 @@
         "update_webui        = False  # @param {type:'boolean'}\n",
         "update_extensions   = True  # @param {type:'boolean'}\n",
         "commit_hash         = \"\"  # @param {type:'string'}\n",
-        "dpm_v2_patch        = False  # @param {type:'boolean'}\n",
+        "dpm_v2_patch        = True  # @param {type:'boolean'}\n",
         "# @markdown ### **Optimization Config**\n",
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
         "ram_alloc_patch     = True  # @param {type:'boolean'}\n",
@@ -380,9 +380,9 @@
         "}\n",
         "\n",
         "vae_dict = {\n",
-        "    \"Anime\"                 : \"https://huggingface.co/NoCrypt/resources/resolve/main/any.vae.safetensors\",\n",
-        "    \"Blessed\"               : \"https://huggingface.co/NoCrypt/resources/resolve/main/blessed2.vae.safetensors\",\n",
-        "    \"Waifu_Diffusion\"       : \"https://huggingface.co/NoCrypt/resources/resolve/main/wd.vae.safetensors\",\n",
+        "    \"Anime\"                 : \"https://huggingface.co/NoCrypt/resources/resolve/main/VAE/any.vae.safetensors\",\n",
+        "    \"Blessed\"               : \"https://huggingface.co/NoCrypt/resources/resolve/main/VAE/blessed2.vae.safetensors\",\n",
+        "    \"Waifu_Diffusion\"       : \"https://huggingface.co/NoCrypt/resources/resolve/main/VAE/wd.vae.safetensors\",\n",
         "    \"Stable_Diffusion\"      : \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\",    \n",
         "}\n",
         "\n",
