feat: add v2 patch, fix dpm++ 2m v2 and mobile opts

--- a/beta_notebook.ipynb
+++ b/beta_notebook.ipynb
@@ -55,7 +55,7 @@
         "from colablib.utils import py_utils, config_utils, package_utils\n",
         "from colablib.utils.ubuntu_utils import ubuntu_deps\n",
         "from colablib.sd_models.downloader import aria2_download\n",
-        "from colablib.utils.git_utils import update_repo, batch_update, validate_repo, reset_repo\n",
+        "from colablib.utils.git_utils import update_repo, batch_update, validate_repo, reset_repo, patch_repo\n",
         "\n",
         "%store -r\n",
         "\n",
@@ -71,7 +71,7 @@
         "update_webui        = False  # @param {type:'boolean'}\n",
         "update_extensions   = True  # @param {type:'boolean'}\n",
         "commit_hash         = \"\"  # @param {type:'string'}\n",
-        "dpm_v2_patch        = True  # @param {type:'boolean'}\n",
+        "dpm++_2m_v2_patch   = True  # @param {type:'boolean'}\n",
         "# @markdown ### **Optimization Config**\n",
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
         "ram_alloc_patch     = True  # @param {type:'boolean'}\n",
@@ -150,6 +150,7 @@
         "\n",
         "    if mount_drive:\n",
         "        if not os.path.exists(directory):\n",
+        "            from google.colab import drive\n",
         "            cprint(\"Mounting google drive...\", color=\"green\", reset=False)\n",
         "            drive.mount(os.path.dirname(directory))\n",
         "        output_dir  = os.path.join(directory, output_drive_folder)\n",
@@ -288,22 +289,24 @@
         "\n",
         "    print_line(80, color=\"green\")\n",
         "\n",
-        "    if dpm_v2_patch:\n",
-        "        os.makedirs(patches_dir)\n",
-        "        dpm_v2_url  = \"https://gist.githubusercontent.com/neggles/75eaacb3f49c209636be61fa96ca95ca/raw/1bcef23f31febf9a4e613f7dace658318f79719e/01-add-DPMPP-2M-V2.patch\"\n",
-        "        dpm_v2_file = os.path.join(patches_dir, '01-add-DPMPP-2M-V2.patch')\n",
-        "        subprocess.run(['wget', dpm_v2_url, '-P', patches_dir, '-c'])\n",
-        "        subprocess.run(['git', 'apply', '--whitespace=fix', dpm_v2_file], cwd=repo_dir)\n",
+        "    if dpm++_2m_v2_patch:\n",
+        "        dpmpp_2m_v2_url  = \"https://gist.githubusercontent.com/Linaqruf/514d40676e97a70ffc3a2451bbf51555/raw/3fa447ebfac6b98a25485374b70447f848267589/01-add-DPMPP-2M-V2.patch\"\n",
+        "        patch_repo(url=dpmpp_2m_v2_url, dir=patches_dir, cwd=repo_dir, whitespace_fix=True)\n",
         "        shutil.rmtree(patches_dir)\n",
         "\n",
         "    if colab_optimizations:\n",
+        "        lowram_patch_url = \"https://raw.githubusercontent.com/ddPn08/automatic1111-colab/main/patches/stablediffusion-lowram.patch\"\n",
+        "        stable_diffusion_repo_dir = os.path.join(repo_dir, \"repositories/stable-diffusion-stability-ai\")\n",
+        "        patch_repo(url=lowram_patch_url, dir=patches_dir, cwd=stable_diffusion_repo_dir)\n",
+        "        shutil.rmtree(patches_dir)\n",
+        "\n",
         "        subprocess.run([\"sed\", \"-i\", f\"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\", os.path.join(repo_dir, \"modules\", \"sd_models.py\")])\n",
         "        subprocess.run([\"sed\", \"-i\", f\"s@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@\", os.path.join(repo_dir, \"webui.py\")])\n",
         "        subprocess.run([\"sed\", \"-i\", f\"s@map_location='cpu'@map_location='cuda'@\", os.path.join(repo_dir, \"modules\", \"extras.py\")])\n",
         "\n",
         "    if mobile_optimizations:\n",
         "        audio_url    = \"https://raw.githubusercontent.com/KoboldAI/KoboldAI-Client/main/colab/silence.m4a\"\n",
-        "        audio_thread = threading.Thread(target=play_audio, args=(\"\",))\n",
+        "        audio_thread = threading.Thread(target=play_audio, args=(audio_url,))\n",
         "        audio_thread.start()\n",
         "\n",
         "    if update_extensions:\n",
@@ -830,7 +833,6 @@
         "    default_prompt        = \"masterpiece, best quality,\"\n",
         "    default_neg_prompt    = \"(worst quality, low quality:1.4)\"\n",
         "    default_sampler       = \"DPM++ 2M Karras\"\n",
-        "    default_sampler_v2    = \"DPM++ 2M Karras v2\"\n",
         "    default_steps         = 20\n",
         "    default_width         = 512\n",
         "    default_height        = 768\n",
@@ -851,7 +853,7 @@
         "\n",
         "    return config\n",
         "\n",
-        "def configure_main_settings(config_file: str, lora_dir: str, use_presets: bool, dpm_v2_patch: bool, ui_config_file: str):\n",
+        "def configure_main_settings(config_file: str, lora_dir: str, use_presets: bool, ui_config_file: str):\n",
         "    config = config_utils.read_config(config_file)\n",
         "\n",
         "    config[\"additional_networks_extra_lora_path\"] = lora_dir\n",
@@ -876,9 +878,6 @@
         "    config_utils.write_config(config_file, config)\n",
         "\n",
         "    if use_presets:\n",
-        "        if dpm_v2_patch:\n",
-        "            preset_config = ui_preset_config()\n",
-        "            preset_config[\"Sampling method/value\"] = default_sampler_v2\n",
         "        configure_ui_settings(ui_config_file)\n",
         "\n",
         "def configure_ui_settings(ui_config_file: str):\n",
@@ -956,7 +955,7 @@
         "    \n",
         "    print_line(80, color=\"green\")\n",
         "\n",
-        "    configure_main_settings(config_file, valid_lora_dir, use_presets, dpm_v2_patch, ui_config_file)\n",
+        "    configure_main_settings(config_file, valid_lora_dir, use_presets, ui_config_file)\n",
         "\n",
         "    if use_gradio_auth:\n",
         "      cprint(\"Gradio Auth (use this account to login):\", color=\"green\")\n",
@@ -995,8 +994,7 @@
         "    os.chdir(repo_dir)\n",
         "    !{final_args}\n",
         "\n",
-        "main()\n",
-        "\n"
+        "main()"
       ],
       "metadata": {
         "cellView": "form",
